--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- Description -->
         <div class="mb-8 bg-blue-50 p-4 rounded-lg border border-blue-100 text-sm text-blue-800">
-            <p><strong>Instrucciones:</strong> Copia el siguiente texto y pégalo en el "System Prompt" de tu LLM favorito (ChatGPT, Claude, etc.) o al inicio de una nueva conversación.</p>
+            <p><strong>Instrucciones:</strong> 複製以下文字並將其貼到您最喜歡的 LLM（例如 ChatGPT、Claude 等）的系統提示中，或貼到新對話的開頭。.</p>
         </div>
 
         <!-- Prompt Container -->
