--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <!-- Header -->
         <header class="mb-8 border-b pb-4 border-slate-200">
             <h1 class="text-3xl font-bold text-slate-900 mb-2">Magister Gallico 🏛️</h1>
-            <p class="text-slate-600">Prompt de Sistema para enseñar Latín (Versión Chino Tradicional)</p>
+            <p class="text-slate-600">用於拉丁語教學的系統提示 </p>
             <p class="text-slate-500 text-sm mt-1">拉丁語教學系統提示詞 (繁體中文版)</p>
         </header>
 
         <!-- Description -->
         <div class="mb-8 bg-blue-50 p-4 rounded-lg border border-blue-100 text-sm text-blue-800">
-            <p><strong>Instrucciones:</strong> 複製以下文字並將其貼到您最喜歡的 LLM（例如 ChatGPT、Claude 等）的系統提示中，或貼到新對話的開頭。.</p>
+            <p><strong>指示:</strong> 複製以下文字並將其貼到您最喜歡的 LLM（例如 ChatGPT、Claude 等）的系統提示中，或貼到新對話的開頭。.</p>
         </div>
 
         <!-- Prompt Container -->
